--- a/src/html/_about-block.htm
+++ b/src/html/_about-block.htm
@@ -16,7 +16,7 @@
       <p class="goal-about__texts text-main">
         Ми зосереджені на інноваціях.<br>Працюємо над <span>вдосконаленням технологій</span>. Гарантуємо найкращу якість наших продуктів.
       </p>
-      <a href="#" class="goal-about__link">
+      <a href="about.html" class="goal-about__link">
         <span>Детальніше</span>
         <img src="@img/icons/arrow-more.svg" alt="img">
       </a>
