--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -15,22 +15,22 @@
 						<ul class="menu__sublist product-submenu">
 							<li class="product-submenu__item">
 								<span class="product-submenu__lable">Прилади</span>
-								<a data-da=".product-tab-01,1100,0" href="device-brn.html" target="_blank" class="product-submenu__link">БРН - блок регулювання напруги стартер генератора</a>
-								<a data-da=".product-tab-01,1100,1" href="device-pktb.html" target="_blank" class="product-submenu__link">ПКТБ - пристрій контролю температури букс</a>
-								<a data-da=".product-tab-01,1100,2" href="device-tpn.html" target="_blank" class="product-submenu__link">ТПН 1000В - транспортний перетворювач напруги</a>
+								<a data-da=".product-tab-01,1100,0" href="device-brn.html"  class="product-submenu__link">БРН - блок регулювання напруги стартер генератора</a>
+								<a data-da=".product-tab-01,1100,1" href="device-pktb.html"  class="product-submenu__link">ПКТБ - пристрій контролю температури букс</a>
+								<a data-da=".product-tab-01,1100,2" href="device-tpn.html"  class="product-submenu__link">ТПН 1000В - транспортний перетворювач напруги</a>
 							</li>
 							<li class="product-submenu__item">
 								<span class="product-submenu__lable">Прожектори</span>
-								<a data-da=".product-tab-02,1100,0" href="projector-slr-36.html" target="_blank" class="product-submenu__link">Магістральний SLR(S)/36</a>
-								<a data-da=".product-tab-02,1100,1" href="projector-slr-18.html" target="_blank" class="product-submenu__link">Маневровий SLR/18</a>
-								<a data-da=".product-tab-02,1100,2" href="projector-sls-9.html" target="_blank" class="product-submenu__link">Маневровий SLS/9</a>
+								<a data-da=".product-tab-02,1100,0" href="projector-slr-36.html"  class="product-submenu__link">Магістральний SLR(S)/36</a>
+								<a data-da=".product-tab-02,1100,1" href="projector-slr-18.html"  class="product-submenu__link">Маневровий SLR/18</a>
+								<a data-da=".product-tab-02,1100,2" href="projector-sls-9.html"  class="product-submenu__link">Маневровий SLS/9</a>
 							</li>
 							<li class="product-submenu__item">
 								<span class="product-submenu__lable">Ліхтарі буферні</span>
-								<a data-da=".product-tab-03,1100,0" href="lamp-lw-160.html" target="_blank" class="product-submenu__link">Білий LW-160</a>
-								<a data-da=".product-tab-03,1100,1" href="lamp-lr-120.html" target="_blank" class="product-submenu__link">Червоний LR-120</a>
-								<a data-da=".product-tab-03,1100,2" href="lamp-lwr-1.html" target="_blank" class="product-submenu__link">Подвійний LWR-1</a>
-								<a data-da=".product-tab-03,1100,3" href="lamp-lwr-2.html" target="_blank" class="product-submenu__link">Двокольоровий LWR-2</a>
+								<a data-da=".product-tab-03,1100,0" href="lamp-lw-160.html"  class="product-submenu__link">Білий LW-160</a>
+								<a data-da=".product-tab-03,1100,1" href="lamp-lr-120.html"  class="product-submenu__link">Червоний LR-120</a>
+								<a data-da=".product-tab-03,1100,2" href="lamp-lwr-1.html"  class="product-submenu__link">Подвійний LWR-1</a>
+								<a data-da=".product-tab-03,1100,3" href="lamp-lwr-2.html"  class="product-submenu__link">Двокольоровий LWR-2</a>
 							</li>
 						</ul>
 						<div data-tabs class="product-tab-submenu">
@@ -56,52 +56,54 @@
 						<button type="button" class="menu__link menu__link_btn highlight__syst">Системи<span></span></button>
 						<ul class="menu__sublist systems-submenu">
 							<li class="systems-submenu__item">
-								<a href="https://localworkarea.github.io/t_me_site/index.html" class="systems-submenu__link">
+								<a href="system-srv.html" class="systems-submenu__link">
 									<span class="systems-submenu__lable">СРВ-1</span>
 									<span class="systems-submenu__name">Комплексна система радіозвʼязку та відеоспостереження</span>
 								</a>
 							</li>
 							<li class="systems-submenu__item">
-								<a href="#" class="systems-submenu__link">
+								<a href="system-bruep.html" class="systems-submenu__link">
 									<span class="systems-submenu__lable">БРУЕП</span>
 									<span class="systems-submenu__name">Блок регулювання	та управління електропередачею</span>
 								</a>
 							</li>
 							<li class="systems-submenu__item">
-								<a href="#" class="systems-submenu__link">
+								<a href="system-msud.html" class="systems-submenu__link">
 									<span class="systems-submenu__lable">МСУД</span>
 									<span class="systems-submenu__name">Мікропроцесорна система управління та діагностики</span>
 								</a>
 							</li>
 							<li class="systems-submenu__item">
-								<a href="#" class="systems-submenu__link">
+								<a href="system-szdk.html" class="systems-submenu__link">
 									<span class="systems-submenu__lable">СЗДК</span>
 									<span class="systems-submenu__name">Система захисту допоміжних трьохфазових кіл</span>
 								</a>
 							</li>
 							<li class="systems-submenu__item">
-								<a href="#" class="systems-submenu__link">
+								<a href="system-kpa.html" class="systems-submenu__link">
 									<span class="systems-submenu__lable">КПА МП</span>
 									<span class="systems-submenu__name">Комплексний прилад автоматики мікропроцесорний</span>
 								</a>
 							</li>
 							<li class="systems-submenu__item">
-								<a href="#" class="systems-submenu__link">
+								<a href="system-sps.html" class="systems-submenu__link">
 									<span class="systems-submenu__lable">СПС-ПГ</span>
 									<span class="systems-submenu__name">Системи пожежної сигналізації та пожежогасіння</span>
 								</a>
 							</li>
 						</ul>
 					</li>
-					<li class="menu__item"><a href="#" class="menu__link highlight__sertif">Сертифікати</a></li>
-					<li class="menu__item"><a href="#" class="menu__link highlight__contact">Контакти</a></li>
+					<li class="menu__item"><a href="sertificate.html" class="menu__link highlight__sertif">Сертифікати</a></li>
+					<li class="menu__item"><a href="contacts.html" class="menu__link highlight__contact">Контакти</a></li>
 				</ul>
 			</nav>
 			<div class="header__other">
 				<a href="tel:+380506286393" class="header__tel">+380506286393</a>
 				<div class="header__lngs">
 					<button type="button" class="header__language">Ukr<span></span></button>
-					<a href="#" class="header__language-link _list">Eng</a>
+					<a href="#" class="header__language-link">
+						<span>Eng</span>
+					</a>
 				</div>
 			</div>
 			<img class="menu__bg-mob" src="@img/background/menu-mob.png" alt="background">
