--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 								<div class="main__subtitle subtitle">Розробка<br> та виробництво</div>
 								<p class="main__txt text-main text-main_dark">Комплексних <span>систем</span> <span>автоматизованого</span> <span>управління</span>, контролю та діагностики електрообладнання для залізничного транспорту</p>
 								<div data-prlx-mouse data-prlx-cx="50" data-prlx-cy="50" data-prlx-dxy  class="main__btn-wrap">
-									<a data-da=".main__subtitle-wrap,750,3" href="#" class="main__btn">
+									<a data-da=".main__subtitle-wrap,750,3" href="systems.html" class="main__btn">
 										<span>
 											ДИВИТИСЯ<br> ВСІ СИСТЕМИ
 											<img src="@img/icons/arrow-more.svg" alt="arrow">
@@ -50,7 +50,7 @@
 											<p class="main-slider__txt">Системи пожежної сигналізації 
 												та пожежогасіння</p>
 										</div>
-										<a href="#" class="main-slider__link">
+										<a href="system-sps.html" class="main-slider__link">
 											<img src="@img/icons/arrow-slider.svg" alt="arrow">
 										</a>
 									</article>
@@ -62,7 +62,7 @@
 											<h2 class="main-slider__title">СЗДК</h2>
 											<p class="main-slider__txt">Система захисту допоміжних трьохфазових кіл</p>
 										</div>
-										<a href="#" class="main-slider__link">
+										<a href="system-szdk.html" class="main-slider__link">
 											<img src="@img/icons/arrow-slider.svg" alt="arrow">
 										</a>
 									</article>
@@ -74,7 +74,7 @@
 											<h2 class="main-slider__title">МСУД</h2>
 											<p class="main-slider__txt">Мікропроцесорна система управління та діагностики</p>
 										</div>
-										<a href="#" class="main-slider__link">
+										<a href="system-msud.html" class="main-slider__link">
 											<img src="@img/icons/arrow-slider.svg" alt="arrow">
 										</a>
 									</article>
@@ -86,7 +86,7 @@
 											<h2 class="main-slider__title">БРУЕП</h2>
 											<p class="main-slider__txt">Блок регулювання та управління електропередачею</p>
 										</div>
-										<a href="#" class="main-slider__link">
+										<a href="system-bruep.html" class="main-slider__link">
 											<img src="@img/icons/arrow-slider.svg" alt="arrow">
 										</a>
 									</article>
@@ -99,7 +99,7 @@
 											<p class="main-slider__txt">Комплексний прилад автоматики 
 												мікропроцесорний</p>
 										</div>
-										<a href="#" class="main-slider__link">
+										<a href="system-kpa.html" class="main-slider__link">
 											<img src="@img/icons/arrow-slider.svg" alt="arrow">
 										</a>
 									</article>
@@ -112,7 +112,7 @@
 											<p class="main-slider__txt">Комплексна система радіозвʼязку
 												і відеоспостереження</p>
 										</div>
-										<a href="#" class="main-slider__link">
+										<a href="system-srv.html" class="main-slider__link">
 											<img src="@img/icons/arrow-slider.svg" alt="arrow">
 										</a>
 									</article>
@@ -155,7 +155,7 @@
 									<p class="products-about__txt text-main">Ми уважні до потреб своїх 
 										замовників. Знаходимо найкращі технічні рішення. Завжди готові 
 										до взаємовигідної співпраці.</p>
-									<a href="#" class="goal-about__link">
+									<a href="products.html" class="goal-about__link">
 										<span>Дивитись все</span>
 										<img src="@img/icons/arrow-more.svg" alt="img">
 									</a>
@@ -168,10 +168,10 @@
 											<div class="card-products__body">
 												<h3 class="card-products__title">ПРОЖЕКТОР<br> 
 													ЛОКОМОТИВНИЙ</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="projector-slr-36.html" class="card-products__img-ibg">
 													<img src="@img/page-products/projector-1.png" alt="">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="projector-slr-36.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Магістральний<br>SLR(S)/36</span>
 												</a>
@@ -183,10 +183,10 @@
 											<div class="card-products__body">
 												<h3 class="card-products__title">ПРОЖЕКТОР<br> 
 													ЛОКОМОТИВНИЙ</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="projector-slr-18.html" class="card-products__img-ibg">
 													<img src="@img/page-products/projector-2.png" alt="">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="projector-slr-18.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Магістральний<br>SLR/18</span>
 												</a>
@@ -198,10 +198,10 @@
 											<div class="card-products__body">
 												<h3 class="card-products__title">ПРОЖЕКТОР<br> 
 													ЛОКОМОТИВНИЙ</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="projector-sls-9.html" class="card-products__img-ibg">
 													<img src="@img/page-products/projector-3.png" alt="">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="projector-sls-9.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Магістральний<br>SLS/9</span>
 												</a>
@@ -212,10 +212,10 @@
 										<article class="card-products card-products_01">
 											<div class="card-products__body">
 												<h3 class="card-products__title">БРН</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="device-brn.html" class="card-products__img-ibg">
 													<img src="@img/page-products/brn-1.png" alt="">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="device-brn.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Блок регулювання<br> напруги стартер<br> генератора</span>
 												</a>
@@ -226,10 +226,10 @@
 										<article class="card-products card-products_02">
 											<div class="card-products__body">
 												<h3 class="card-products__title">ПКТБ</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="device-pktb.html" class="card-products__img-ibg">
 													<img src="@img/page-products/pktb.png" alt="">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="device-pktb.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Пристрій контролю<br> температури	букс</span>
 												</a>
@@ -240,10 +240,10 @@
 										<article class="card-products card-products_03">
 											<div class="card-products__body">
 												<h3 class="card-products__title">ТПН 1000В</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="device-tpn.html" class="card-products__img-ibg">
 													<img src="@img/page-products/tpn.png" alt="">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="device-tpn.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Транспортний перетворчювач напруги</span>
 												</a>
@@ -254,10 +254,10 @@
 										<article class="card-products card-products_07">
 											<div class="card-products__body">
 												<h3 class="card-products__title">ліхтар<br>буферний</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="lamp-lw-160.html" class="card-products__img-ibg">
 													<img src="@img/page-products/lighting-1.png" alt="Ліхтар буферний">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="lamp-lw-160.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Білий<br> 
 														LW-160
@@ -270,10 +270,10 @@
 										<article class="card-products card-products_08">
 											<div class="card-products__body">
 												<h3 class="card-products__title">ліхтар<br>буферний</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="lamp-lr-120.html" class="card-products__img-ibg">
 													<img src="@img/page-products/lighting-2.png" alt="Ліхтар буферний">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="lamp-lr-120.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Червоний<br>
 														LR-120</span>
@@ -285,10 +285,10 @@
 										<article class="card-products card-products_09">
 											<div class="card-products__body">
 												<h3 class="card-products__title">ліхтар<br>буферний</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="lamp-lwr-1.html" class="card-products__img-ibg">
 													<img src="@img/page-products/lighting-3.png" alt="Ліхтар буферний">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="lamp-lwr-1.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Подвійний<br>
 														LWR-1</span>
@@ -300,10 +300,10 @@
 										<article class="card-products card-products_10">
 											<div class="card-products__body">
 												<h3 class="card-products__title">ліхтар<br>буферний</h3>
-												<a href="#" class="card-products__img-ibg">
+												<a href="lamp-lwr-2.html" class="card-products__img-ibg">
 													<img src="@img/page-products/lighting-4.png" alt="Ліхтар буферний">
 												</a>
-												<a href="#" class="card-products__bottom">
+												<a href="lamp-lwr-2.html" class="card-products__bottom">
 													<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 													<span>Двокольоровий<br>
 														LWR-2</span>
