--- a/src/system-kpa.html
+++ b/src/system-kpa.html
@@ -27,44 +27,44 @@
               <div class="system__nav-body">
                 <ul data-showmore-content="1" class="system__list">
                   <li class="system__item system__item_mob">
-                    <a href="#" class="system__link">
+                    <div class="system__link">
                       <span class="system__link_name">КПА МП</span>
                       <span class="system__link_numb">005</span>
-                    </a>
+                    </div>
                   </li>
                   
                   <li class="system__item">
-                    <a href="#" class="system__link ">
+                    <a href="system-sps.html" class="system__link ">
                       <span class="system__link_name">СПС-ПГ</span>
                       <span class="system__link_numb">001</span>
                     </a>
                   </li>
                   <li class="system__item">
-                    <a href="#" class="system__link">
+                    <a href="system-bruep.html" class="system__link">
                     <span class="system__link_name">БРУЕП</span>
                     <span class="system__link_numb">002</span>
                     </a>
                   </li>
                   <li class="system__item">
-                    <a href="#" class="system__link">
+                    <a href="system-msud.html" class="system__link">
                     <span class="system__link_name">МСУД</span>
                     <span class="system__link_numb">003</span>
                     </a>
                   </li>
                   <li class="system__item">
-                    <a href="#" class="system__link">
+                    <a href="system-szdk.html" class="system__link">
                     <span class="system__link_name">СЗДК</span>
                     <span class="system__link_numb">004</span>
                     </a>
                   </li>
                   <li class="system__item">
-                    <a href="#" class="system__link _active">
+                    <a href="system-kpa.html" class="system__link _active">
                     <span class="system__link_name">КПА МП</span>
                     <span class="system__link_numb">005</span>
                     </a>
                   </li>
                   <li class="system__item">
-                    <a href="#" class="system__link">
+                    <a href="system-srv.html" class="system__link">
                       <span class="system__link_name">СРВ-1</span>
                       <span class="system__link_numb">006</span>
                     </a>
