--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -14,42 +14,42 @@
 				<span class="footer-prod__lable">Продукція</span>
 				<nav data-showmore="items" data-showmore-media="700,max" class="footer-prod">
 					<ul data-showmore-content="3" class="footer-prod__list">
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">БРН - блок регулювання напруги	стартер генератора</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">ПКТБ - пристрій контролю температури букс</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">ТПН 1000В - транспортний перетворювач напруги</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Прожектор магістральний SLR(S)/36</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Прожектор маневровий SLS/18</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Прожектор маневровий SLS/9</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний білий LW-160</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний червоний LR-120</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний подвійний LWR-1</a></li>
-						<li class="footer-prod__item"><a href="#" class="footer-prod__link">Ліхтар буферний двокольоровий LWR-2</a></li>
+						<li class="footer-prod__item"><a href="device-brn.html" class="footer-prod__link">БРН - блок регулювання напруги	стартер генератора</a></li>
+						<li class="footer-prod__item"><a href="device-pktb.html" class="footer-prod__link">ПКТБ - пристрій контролю температури букс</a></li>
+						<li class="footer-prod__item"><a href="device-tpn.html" class="footer-prod__link">ТПН 1000В - транспортний перетворювач напруги</a></li>
+						<li class="footer-prod__item"><a href="projector-slr-36.html" class="footer-prod__link">Прожектор магістральний SLR(S)/36</a></li>
+						<li class="footer-prod__item"><a href="projector-slr-18.html" class="footer-prod__link">Прожектор маневровий SLR/18</a></li>
+						<li class="footer-prod__item"><a href="projector-sls-9.html" class="footer-prod__link">Прожектор маневровий SLS/9</a></li>
+						<li class="footer-prod__item"><a href="lamp-lw-160.html" class="footer-prod__link">Ліхтар буферний білий LW-160</a></li>
+						<li class="footer-prod__item"><a href="lamp-lr-120.html" class="footer-prod__link">Ліхтар буферний червоний LR-120</a></li>
+						<li class="footer-prod__item"><a href="lamp-lwr-1.html" class="footer-prod__link">Ліхтар буферний подвійний LWR-1</a></li>
+						<li class="footer-prod__item"><a href="lamp-lwr-2.html" class="footer-prod__link">Ліхтар буферний двокольоровий LWR-2</a></li>
 					</ul>
 					<button hidden data-showmore-button type="button" class="footer-prod__more"><span>+</span></button>
 				</nav>
 			</div>
 			<ul class="footer__system footer-syst">
 				<span class="footer-syst__lable">Системи</span>
-				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">СРВ-1</a></li>
-				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">БРУЕП</a></li>
-				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">МСУД</a></li>
-				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">СЗДК</a></li>
-				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">КПА МП</a></li>
-				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="#" class="footer-syst__link">СПС-ПГ</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="system-srv.html" class="footer-syst__link">СРВ-1</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="system-bruep.html" class="footer-syst__link">БРУЕП</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="system-msud.html" class="footer-syst__link">МСУД</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="system-szdk.html" class="footer-syst__link">СЗДК</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="system-kpa.html" class="footer-syst__link">КПА МП</a></li>
+				<li data-da=".footer-syst__mob-wrap,450" class="footer-syst__item"><a href="system-sps.html" class="footer-syst__link">СПС-ПГ</a></li>
 				<div class="footer-syst__mob-wrap"></div>
 			</ul>
 			<div class="footer__other">
 				<div class="footer__about footer-about">
 					<div class="footer-about__lable">Про нас</div>
-					<a href="#" class="footer-about__link">Про підприємство</a>
-					<a href="#" class="footer-about__link">Сертифікати</a>
+					<a href="about.html" class="footer-about__link">Про підприємство</a>
+					<a href="sertificate.html" class="footer-about__link">Сертифікати</a>
 				</div>
-				<div class="footer__contact footer-contact">
+				<address class="footer__contact footer-contact">
 					<div class="footer-contact__lable">Контакти</div>
 					<p class="footer-contact__txt">Україна, м. Черкаси,<br> вул. Добровольского, 1</p>
 					<a href="tel:+380506286393" class="footer-contact__tel">+38 (050) 628-63-93</a>
 					<a href="tel:+380508554017" class="footer-contact__tel">+38 (050) 855-40-17</a>
-				</div>
+				</address>
 			</div>
 		</div>
 		<div class="footer__block-other">
