--- a/src/lamp-lr-120.html
+++ b/src/lamp-lr-120.html
@@ -103,15 +103,15 @@
 													<div class="lighting-mode__txt-body">
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Напруга живлення: </span></p>
-															<p class="spollers-product__txt">50-160В.</p>
+															<p class="spollers-product__txt"><span>50-160В</span></p>
 														</div>
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Споживна потужність:</span></p>
-															<p class="spollers-product__txt">35Вт</p>
+															<p class="spollers-product__txt"><span>35Вт</span></p>
 														</div>
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Ступінь захисту: </span></p>
-															<p class="spollers-product__txt">IP20</p>
+															<p class="spollers-product__txt"><span>IP20</span></p>
 														</div>
 													</div>
 												</li>
