--- a/src/projector-slr-36.html
+++ b/src/projector-slr-36.html
@@ -153,15 +153,15 @@
 													<div class="lighting-mode__txt-body">
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Напруга живлення: </span></p>
-															<p class="spollers-product__txt">від 24В до 110В.</p>
+															<p class="spollers-product__txt"><span>24В-110В</span></p>
 														</div>
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Споживна потужність:</span></p>
-															<p class="spollers-product__txt">140Вт</p>
+															<p class="spollers-product__txt"><span>140Вт</span></p>
 														</div>
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Ступінь захисту: </span></p>
-															<p class="spollers-product__txt">IP20</p>
+															<p class="spollers-product__txt"><span>IP20</span></p>
 														</div>
 													</div>
 												</li>
