--- a/src/system-srv.html
+++ b/src/system-srv.html
@@ -309,7 +309,7 @@
                         <p class="system-spoller__txt text-main-dark">Призначений для <span>вимірювання температури в салонах</span> поїзда та управління електрообігрівачами 
                           в салонах вагона взимку.
                           </p>
-                          <div class="system-spoller__img-ibg">
+                          <div class="system-spoller__img-ibg system-spoller-num-08">
                             <img src="@img/page-systems/system-srv/8-2.png" alt="system">
                           </div>
                       </div>
@@ -377,11 +377,14 @@
                         <div class="system-spoller__img-ibg">
                           <img src="@img/page-systems/system-srv/11-1.png" alt="system">
                         </div>
-                        <div class="system-spoller__img-ibg">
-                          <img src="@img/page-systems/system-srv/11-2.png" alt="system">
-                        </div>
-                        <div class="system-spoller__img-ibg">
-                          <img src="@img/page-systems/system-srv/11-3.png" alt="system">
+
+                        <div data-gallery class="sertificate-gallery">
+                          <a href="@img/page-systems/system-srv/11-2-big.png" class="system-spoller__img-ibg">
+                            <img src="@img/page-systems/system-srv/11-2.png" alt="Сертифікат ліцензійного користувача">
+                          </a>
+                          <a href="@img/page-systems/system-srv/11-3-big.png" class="system-spoller__img-ibg">
+                            <img src="@img/page-systems/system-srv/11-3.png" alt="Сертифікат">
+                          </a>
                         </div>
                       </div>
                     </div>
