--- a/src/system-szdk.html
+++ b/src/system-szdk.html
@@ -84,7 +84,7 @@
                 <div class="descrp-syst__label label-txt label-txt_vertical">опис.</div>
                 <div class="descrp-syst__name">
                   <p class="descrp-syst__name-txt">Призначення<br> системи</p>
-                  <div class="descrp-syst__img-ibg">
+                  <div data-da=".descrp-syst__about,600,2" class="descrp-syst__img-ibg">
                     <img src="@img/page-systems/szdk-2.png" alt="СЗДК">
                   </div>
                 </div>
