--- a/src/projector-slr-18.html
+++ b/src/projector-slr-18.html
@@ -125,15 +125,15 @@
 													<div class="lighting-mode__txt-body">
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Напруга живлення: </span></p>
-															<p class="spollers-product__txt">50-110В.</p>
+															<p class="spollers-product__txt"><span>50-110В</span></p>
 														</div>
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Споживна потужність:</span></p>
-															<p class="spollers-product__txt">60Вт</p>
+															<p class="spollers-product__txt"><span>60Вт</span></p>
 														</div>
 														<div class="lighting-mode__txt-p">
 															<p class="spollers-product__txt"><span>Ступінь захисту: </span></p>
-															<p class="spollers-product__txt">IP20</p>
+															<p class="spollers-product__txt"><span>IP20</span></p>
 														</div>
 													</div>
 												</li>
