--- a/src/index.html
+++ b/src/index.html
@@ -349,7 +349,7 @@
 						</div>
 						<div data-spollers data-spollers-speed="500" class="spollers spollers_dark">
 							<details class="spollers__item">
-								<summary data-spoller-close class="spollers__summary">
+								<summary  class="spollers__summary">
 									<div class="spollers__num">01.</div>
 									<h3 class="spollers__title">2ТЕ10М - 3589</h3>
 									<span class="spollers__close"></span>
@@ -374,7 +374,7 @@
 								</div>
 							</details>
 							<details class="spollers__item">
-								<summary data-spoller-close class="spollers__summary">
+								<summary  class="spollers__summary">
 									<div class="spollers__num">02.</div>
 									<h3 class="spollers__title">ТЕМ2МП-137</h3>
 									<span class="spollers__close"></span>
@@ -396,7 +396,7 @@
 								</div>
 							</details>
 							<details class="spollers__item">
-								<summary data-spoller-close class="spollers__summary">
+								<summary  class="spollers__summary">
 									<div class="spollers__num">03.</div>
 									<h3 class="spollers__title">ТЕМ2 - 8907</h3>
 									<span class="spollers__close"></span>
@@ -420,7 +420,7 @@
 								</div>
 							</details>
 							<details class="spollers__item">
-								<summary data-spoller-close class="spollers__summary">
+								<summary  class="spollers__summary">
 									<div class="spollers__num">04.</div>
 									<h3 class="spollers__title">ТЕМ7 - 0145</h3>
 									<span class="spollers__close"></span>
@@ -440,7 +440,7 @@
 								</div>
 							</details>
 							<details class="spollers__item">
-								<summary data-spoller-close class="spollers__summary">
+								<summary  class="spollers__summary">
 									<div class="spollers__num">05.</div>
 									<h3 class="spollers__title">ДПКР3 - 001</h3>
 									<span class="spollers__close"></span>
