--- a/src/lamp-lwr-1.html
+++ b/src/lamp-lwr-1.html
@@ -36,7 +36,7 @@
 							<div class="about-product__gallery gallery-product">
 								<div data-gallery class="gallery-product__images">
 									<a href="@img/page-products/gallery/LWR-1-2.png" class="gallery-product__img-ibg">
-										<img src="@img/page-products/gallery/LWR-1-1.png" alt="Ліхтар буферний подвійний LWR-1">
+										<img src="@img/page-products/gallery/LWR-1-2.png" alt="Ліхтар буферний подвійний LWR-1">
 									</a>
 								</div>
 							</div>
@@ -49,7 +49,7 @@
 								</div>
 								<div data-spollers data-spollers-speed="500" class="spollers-product">
 									<details class="spollers-product__item">
-										<summary data-spoller-close class="spollers-product__summary">
+										<summary  class="spollers-product__summary">
 											<span class="spollers-product__num">01.</span>
 											<h3 class="spollers-product__title">Споживачі</h3>
 											<span class="spollers-product__close"></span>
@@ -61,7 +61,7 @@
 										</div>
 									</details>
 									<details class="spollers-product__item">
-										<summary data-spoller-close class="spollers-product__summary">
+										<summary  class="spollers-product__summary">
 											<span class="spollers-product__num">02.</span>
 											<h3 class="spollers-product__title">об'єкт призначення</h3>
 											<span class="spollers-product__close"></span>
@@ -73,7 +73,7 @@
 										</div>
 									</details>
 									<details class="spollers-product__item">
-										<summary data-spoller-close class="spollers-product__summary">
+										<summary  class="spollers-product__summary">
 											<span class="spollers-product__num">03.</span>
 											<h3 class="spollers-product__title">Характеристики</h3>
 											<span class="spollers-product__close"></span>
