--- a/src/system-sps.html
+++ b/src/system-sps.html
@@ -109,7 +109,7 @@
               </div>
               <div data-spollers data-spollers-speed="500" class="system-spoller spollers spollers_dark">
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">01.</div>
                     <h3 class="system-spoller__title">ППКП</h3>
                     <span class="spollers__close"></span>
@@ -133,7 +133,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">02.</div>
                     <h3 class="system-spoller__title">БАВ</h3>
                     <span class="spollers__close"></span>
@@ -157,7 +157,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">03.</div>
                     <h3 class="system-spoller__title">ДРЖ</h3>
                     <span class="spollers__close"></span>
