--- a/src/systems.html
+++ b/src/systems.html
@@ -35,7 +35,7 @@
             <h1 class="systems-main__title title-second">Системи</h1>
             <div class="systems-main__block">
               <article class="systems-main__item systems-item">
-                <a href="system-sps.html" target="_blank" class="systems-item__link"></a>
+                <a href="system-sps.html" class="systems-item__link"></a>
                 <div class="systems-item__body">
                   <h2 class="systems-item__title">СПС-ПГ</h2>
                   <div class="systems-item__img-ibg">
@@ -49,7 +49,7 @@
                 </div>
               </article>
               <article class="systems-main__item systems-item">
-                <a href="system-bruep.html" target="_blank" class="systems-item__link"></a>
+                <a href="system-bruep.html" class="systems-item__link"></a>
                 <div class="systems-item__body">
                   <h2 class="systems-item__title">БРУЕП</h2>
                   <div class="systems-item__img-ibg">
@@ -62,7 +62,7 @@
                 </div>
               </article>
               <article class="systems-main__item systems-item">
-                <a href="system-msud.html" target="_blank" class="systems-item__link"></a>
+                <a href="system-msud.html" class="systems-item__link"></a>
                 <div class="systems-item__body">
                   <h2 class="systems-item__title">МСУД</h2>
                   <div class="systems-item__img-ibg">
@@ -76,7 +76,7 @@
                 </div>
               </article>
               <article class="systems-main__item systems-item">
-                <a href="system-szdk.html" target="_blank" class="systems-item__link"></a>
+                <a href="system-szdk.html" class="systems-item__link"></a>
                 <div class="systems-item__body">
                   <h2 class="systems-item__title">СЗДК</h2>
                   <div class="systems-item__img-ibg">
@@ -90,7 +90,7 @@
                 </div>
               </article>
               <article class="systems-main__item systems-item">
-                <a href="system-kpa.html" target="_blank" class="systems-item__link"></a>
+                <a href="system-kpa.html" class="systems-item__link"></a>
                 <div class="systems-item__body">
                   <h2 class="systems-item__title">КПА МП</h2>
                   <div class="systems-item__img-ibg">
@@ -104,7 +104,7 @@
                 </div>
               </article>
               <article class="systems-main__item systems-item">
-                <a href="system-srv.html" target="_blank" class="systems-item__link"></a>
+                <a href="system-srv.html" class="systems-item__link"></a>
                 <div class="systems-item__body">
                   <h2 class="systems-item__title">СРВ-1</h2>
                   <div class="systems-item__img-ibg">
