--- a/src/products.html
+++ b/src/products.html
@@ -23,10 +23,10 @@
 							<article data-da=".devices-slider__slide.slide-01,890" class="card-products card-products_01">
 								<div class="card-products__body">
 									<h3 class="card-products__title">БРН</h3>
-									<a href="device-brn.html" target="_blank" class="card-products__img-ibg">
+									<a href="device-brn.html" class="card-products__img-ibg">
 										<img src="@img/page-products/brn-1.png" alt="">
 									</a>
-									<a href="device-brn.html" target="_blank" class="card-products__bottom">
+									<a href="device-brn.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Блок регулювання<br> напруги стартер<br> генератора</span>
 									</a>
@@ -35,10 +35,10 @@
 							<article data-da=".devices-slider__slide.slide-02,890" class="card-products card-products_02">
 								<div class="card-products__body">
 									<h3 class="card-products__title">ПКТБ</h3>
-									<a href="device-pktb.html" target="_blank" class="card-products__img-ibg">
+									<a href="device-pktb.html" class="card-products__img-ibg">
 										<img src="@img/page-products/pktb.png" alt="">
 									</a>
-									<a href="device-pktb.html" target="_blank" class="card-products__bottom">
+									<a href="device-pktb.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Пристрій контролю<br> температури	букс</span>
 									</a>
@@ -47,10 +47,10 @@
 							<article data-da=".devices-slider__slide.slide-03,890" class="card-products card-products_03">
 								<div class="card-products__body">
 									<h3 class="card-products__title">ТПН 1000В</h3>
-									<a href="device-tpn.html" target="_blank" class="card-products__img-ibg">
+									<a href="device-tpn.html" class="card-products__img-ibg">
 										<img src="@img/page-products/tpn.png" alt="">
 									</a>
-									<a href="device-tpn.html" target="_blank" class="card-products__bottom">
+									<a href="device-tpn.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Транспортний перетворчювач напруги</span>
 									</a>
@@ -79,10 +79,10 @@
 								<div class="card-products__body">
 									<h3 class="card-products__title">ПРОЖЕКТОР<br> 
 										ЛОКОМОТИВНИЙ</h3>
-									<a href="projector-slr-36.html" target="_blank" class="card-products__img-ibg">
+									<a href="projector-slr-36.html" class="card-products__img-ibg">
 										<img src="@img/page-products/projector-1.png" alt="">
 									</a>
-									<a href="projector-slr-36.html" target="_blank" class="card-products__bottom">
+									<a href="projector-slr-36.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Магістральний<br>SLR(S)/36</span>
 									</a>
@@ -92,10 +92,10 @@
 								<div class="card-products__body">
 									<h3 class="card-products__title">ПРОЖЕКТОР<br> 
 										ЛОКОМОТИВНИЙ</h3>
-									<a href="projector-slr-18.html" target="_blank" class="card-products__img-ibg">
+									<a href="projector-slr-18.html" class="card-products__img-ibg">
 										<img src="@img/page-products/projector-2.png" alt="">
 									</a>
-									<a href="projector-slr-18.html" target="_blank" class="card-products__bottom">
+									<a href="projector-slr-18.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Магістральний<br>SLR/18</span>
 									</a>
@@ -105,10 +105,10 @@
 								<div class="card-products__body">
 									<h3 class="card-products__title">ПРОЖЕКТОР<br> 
 										ЛОКОМОТИВНИЙ</h3>
-									<a href="projector-sls-9.html" target="_blank" class="card-products__img-ibg">
+									<a href="projector-sls-9.html" class="card-products__img-ibg">
 										<img src="@img/page-products/projector-3.png" alt="">
 									</a>
-									<a href="projector-sls-9.html" target="_blank" class="card-products__bottom">
+									<a href="projector-sls-9.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Магістральний<br>SLS/9</span>
 									</a>
@@ -138,10 +138,10 @@
 							<article data-da=".lamps-slider__slide.slide-01,890" class="card-products card-products_07">
 								<div class="card-products__body">
 									<h3 class="card-products__title">ліхтар<br>буферний</h3>
-									<a href="lamp-lw-160.html" target="_blank" class="card-products__img-ibg">
+									<a href="lamp-lw-160.html" class="card-products__img-ibg">
 										<img src="@img/page-products/lighting-1.png" alt="Ліхтар буферний">
 									</a>
-									<a href="lamp-lw-160.html" target="_blank" class="card-products__bottom">
+									<a href="lamp-lw-160.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Білий<br> 
 											LW-160
@@ -152,10 +152,10 @@
 							<article data-da=".lamps-slider__slide.slide-02,890" class="card-products card-products_08">
 								<div class="card-products__body">
 									<h3 class="card-products__title">ліхтар<br>буферний</h3>
-									<a href="lamp-lr-120.html" target="_blank" class="card-products__img-ibg">
+									<a href="lamp-lr-120.html" class="card-products__img-ibg">
 										<img src="@img/page-products/lighting-2.png" alt="Ліхтар буферний">
 									</a>
-									<a href="lamp-lr-120.html" target="_blank" class="card-products__bottom">
+									<a href="lamp-lr-120.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Червоний<br>
 											LR-120</span>
@@ -165,10 +165,10 @@
 							<article data-da=".lamps-slider__slide.slide-03,890" class="card-products card-products_09">
 								<div class="card-products__body">
 									<h3 class="card-products__title">ліхтар<br>буферний</h3>
-									<a href="lamp-lwr-1.html" target="_blank" class="card-products__img-ibg">
+									<a href="lamp-lwr-1.html" class="card-products__img-ibg">
 										<img src="@img/page-products/lighting-3.png" alt="Ліхтар буферний">
 									</a>
-									<a href="lamp-lwr-1.html" target="_blank" class="card-products__bottom">
+									<a href="lamp-lwr-1.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Подвійний<br>
 											LWR-1</span>
@@ -178,10 +178,10 @@
 							<article data-da=".lamps-slider__slide.slide-04,890" class="card-products card-products_10">
 								<div class="card-products__body">
 									<h3 class="card-products__title">ліхтар<br>буферний</h3>
-									<a href="lamp-lwr-2.html" target="_blank" class="card-products__img-ibg">
+									<a href="lamp-lwr-2.html" class="card-products__img-ibg">
 										<img src="@img/page-products/lighting-4.png" alt="Ліхтар буферний">
 									</a>
-									<a href="lamp-lwr-2.html" target="_blank" class="card-products__bottom">
+									<a href="lamp-lwr-2.html" class="card-products__bottom">
 										<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 										<span>Двокольоровий<br>
 											LWR-2</span>
