--- a/src/projector-slr-36.html
+++ b/src/projector-slr-36.html
@@ -60,7 +60,7 @@
 								</div>
 								<div data-spollers data-spollers-speed="500" class="spollers-product">
 									<details class="spollers-product__item">
-										<summary data-spoller-close class="spollers-product__summary">
+										<summary  class="spollers-product__summary">
 											<span class="spollers-product__num">01.</span>
 											<h3 class="spollers-product__title">Встановлення</h3>
 											<span class="spollers-product__close"></span>
@@ -72,7 +72,7 @@
 										</div>
 									</details>
 									<details class="spollers-product__item">
-										<summary data-spoller-close class="spollers-product__summary">
+										<summary  class="spollers-product__summary">
 											<span class="spollers-product__num">02.</span>
 											<h3 class="spollers-product__title">Модифікації</h3>
 											<span class="spollers-product__close"></span>
@@ -111,7 +111,7 @@
 										</div>
 									</details>
 									<details class="spollers-product__item">
-										<summary data-spoller-close class="spollers-product__summary">
+										<summary  class="spollers-product__summary">
 											<span class="spollers-product__num">03.</span>
 											<h3 class="spollers-product__title">Споживачі</h3>
 											<span class="spollers-product__close"></span>
@@ -123,7 +123,7 @@
 										</div>
 									</details>
 									<details class="spollers-product__item">
-										<summary data-spoller-close class="spollers-product__summary">
+										<summary  class="spollers-product__summary">
 											<span class="spollers-product__num">04.</span>
 											<h3 class="spollers-product__title">Режими освітлення</h3>
 											<span class="spollers-product__close"></span>
