--- a/src/system-srv.html
+++ b/src/system-srv.html
@@ -115,7 +115,7 @@
               </div>
               <div data-spollers data-spollers-speed="500" class="system-spoller spollers spollers_dark">
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">01.</div>
                     <h3 class="system-spoller__title">Комп’ютер бортовий <span>КБ-2</span></h3>
                     <span class="spollers__close"></span>
@@ -146,7 +146,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">02.</div>
                     <h3 class="system-spoller__title">Контролер зв’язку <span>КЗ-5</span></h3>
                     <span class="spollers__close"></span>
@@ -168,7 +168,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">03.</div>
                     <h3 class="system-spoller__title">Пристрій переговорний машиніста <span>ППМ-1</span></h3>
                     <span class="spollers__close"></span>
@@ -194,7 +194,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">04.</div>
                     <h3 class="system-spoller__title">Пристрій переговорний машиніста <span>ППМ-2</span></h3>
                     <span class="spollers__close"></span>
@@ -218,7 +218,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">05.</div>
                     <h3 class="system-spoller__title">Пристрій зв’язку пасажира <span>ПЗП-2</span></h3>
                     <span class="spollers__close"></span>
@@ -242,7 +242,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">06.</div>
                     <h3 class="system-spoller__title">Підсилювач цифровий <span>ПЦ-30W</span></h3>
                     <span class="spollers__close"></span>
@@ -269,7 +269,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">07.</div>
                     <h3 class="system-spoller__title">Покажчик маршрутний <span>ВМ-1</span></h3>
                     <span class="spollers__close"></span>
@@ -291,7 +291,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">08.</div>
                     <h3 class="system-spoller__title">Регулятор температури <span>РТ-2</span><br> з датчиком <span class="title-08">t<span>0</span></span> <span>ДТ-02С</span></h3>
                     <span class="spollers__close"></span>
@@ -317,7 +317,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">09.</div>
                     <h3 class="system-spoller__title">Блок навігації <span>БН-1</span></h3>
                     <span class="spollers__close"></span>
@@ -342,7 +342,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">10.</div>
                     <h3 class="system-spoller__title">Дисплеї салонні <span>ДС-1</span></h3>
                     <span class="spollers__close"></span>
@@ -366,7 +366,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">11.</div>
                     <h3 class="system-spoller__title">Відеоспостереження</h3>
                     <span class="spollers__close"></span>
@@ -411,7 +411,7 @@
                   </div>
                 </details>
                 <details class="system-spoller__item">
-                  <summary data-spoller-close class="spollers__summary">
+                  <summary  class="spollers__summary">
                     <div class="spollers__num">12.</div>
                     <h3 class="system-spoller__title">Роутер <span>LTE</span></h3>
                     <span class="spollers__close"></span>
