--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -101,7 +101,7 @@
 										<span class="systems-submenu__name">Комплексна система радіозвʼязку та відеоспостереження</span>
 									</a>
 								</li>
-								<a data-da=".menu__sublist-systems,1100,0" href="products.html" class="view-all-link">
+								<a data-da=".menu__sublist-systems,1100,0" href="systems.html" class="view-all-link">
 									Дивитись всі системи
 									<img src="@img/icons/arrow-more-slider.svg" alt="arrow">
 								</a>
